                    - In the class 'TargetingOpportunitiesBrick', theses variables are not injected anymore:
                      "hidden_fields", "is_organisation" & "is_contact".
            * Emails :
                - In the brick classes 'ContactsBrick' & 'OrganisationsBrick',
                  the variable "field_hidden" is not injected anymore.
            * Geolocation:
                - _MapBrick.get_addresses_as_dict() is now an instance method, not a static one.
            * Mobile :
                - The class 'forms.PhoneInput' has been removed.
            * Polls :
                - The following views have been renamed :
                    - "polls__create_reply"               => "polls__create_replies"
                    - "polls__create_reply_from_pform"    => "polls__create_replies_from_pform"
                    - "polls__create_reply_from_campaign" => "polls__create_replies_from_campaign"
                    - "polls__create_reply_from_person"   => "polls__create_replies_from_person"
            * SMS :
                - In the brick class 'ContactsBrick', the variable "field_hidden" is not injected anymore.

    Internal breaking changes :
    ---------------------------
    (they should not cause problem if you have not deeply modified the source code of Creme)

        # In 'creme_core.auth.backend', the constants '_*_PREFIX' have been removed.
        # The method 'creme_core.models.CremeModel._delete_stored_file()' is not static anymore.
        # In 'creme_core.templatetags' :
            - In 'creme_core_tags', the function 'do_jsondata()' & the class 'JsonScriptNode' have been replaced.
            - In 'creme_listview' :
                - The tag {% listview_entity_filters %} does not inject the following variables in its template context:
                  "entity_filters", "efilter_id", "can_edit", "can_delete".